Fixed css on home where images of anime overlapped

--- a/webapp/css/styleHome.css
+++ b/webapp/css/styleHome.css
@@ -544,10 +544,13 @@ h4 {
 
 .big_top_three {
   display: flex;
-  justify-content: center;}
+  justify-content: center;
+}
 
 .anime_container {
+  display: flex;
     width: 450px;
+    margin-left: 60px;
     height: 170px;
     
 
